# ControlDisplayInputSource

./: README.md
DotNet/ControlDisplayInputSource/: ControlDisplayInputSource.sln
DotNet/ControlDisplayInputSource/ControlDisplayInputSource/: ControlDisplayInputSource.csproj  DellU2410.cs  Helper.cs  Program.cs
DotNet/ControlDisplayInputSource/ControlDisplayInputSource.Core/: DisplayControl.cs  IDisplayControl.cs
Go/cdis/: build.bat  go.mod  main.go
Go/cdis/display/: highLevelMonitorAPI.go  library.go  monitor.go  myCustom.go  test.go  vcpFeature.go
Go/cdis/display2/: platform.go
Go/cdis/utils/: highLevelMonitorAPI.go  library.go  monitor.go  myCustom.go  test.go  vcpFeature.go
Rust/cdis/: Cargo.toml
Rust/cdis-pre/: Cargo.toml
Rust/cdis-pre/src/: main.rs  print.rs
Rust/cdis/src/: README.md  display.rs  main.rs  print.rs
Rust/winapitest/: Cargo.toml
Rust/winapitest/src/: main.rs
Tools/: Readme.txt
